# fidus-pieces

./: pyproject.toml
src/fidus_pieces/: __init__.py  doctr.py  extraction.py  ocr.py  qr_decoder.py  signal_fusion.py
src/fidus_pieces.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_extraction.py  test_qr_decoder.py  test_signal_fusion.py
