[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fidus-pieces"
version = "0.1.0"
description = "PDF/OCR processing pipeline for Swiss fiduciary documents"
requires-python = ">=3.11"
dependencies = [
    "PyMuPDF>=1.23",
    "Pillow>=10.0",
    "pytesseract>=0.3",
]

[project.optional-dependencies]
doctr = ["python-doctr[torch]>=0.8"]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
